--- a/src/Audio/CMakeLists.txt
+++ b/src/Audio/CMakeLists.txt
@@ -23,3 +23,7 @@ target_link_libraries(Audio
 
 target_include_directories(Audio PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
+if(BUILD_TESTING)
+	add_qgc_test(AudioOutputTest)
+endif()
+
