--- a/src/AnalyzeView/CMakeLists.txt
+++ b/src/AnalyzeView/CMakeLists.txt
@@ -17,14 +17,15 @@ add_library(AnalyzeView
 )
 
 target_link_libraries(AnalyzeView
+	PRIVATE
+		qgc
+
 	PUBLIC
 		Qt5::Location
 		Qt5::SerialPort
 		Qt5::TextToSpeech
 		Qt5::Widgets
-
-		qgc
 )
 
-target_include_directories(AnalyzeView PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(AnalyzeView INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
