--- a/src/MissionManager/CMakeLists.txt
+++ b/src/MissionManager/CMakeLists.txt
@@ -66,13 +66,11 @@ add_library(MissionManager
 
 target_link_libraries(MissionManager
 	PUBLIC
-		qgc
+		Qt5::Xml
+		
 	PRIVATE
+		qgc
 		ui
 )
 
-target_include_directories(MissionManager
-	PUBLIC
-		${CMAKE_CURRENT_SOURCE_DIR}
-	)
-
+target_include_directories(MissionManager INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
