--- a/src/Audio/CMakeLists.txt
+++ b/src/Audio/CMakeLists.txt
@@ -12,13 +12,13 @@ add_library(Audio
 )
 
 target_link_libraries(Audio
+	PRIVATE
+		qgc
 	PUBLIC
-	Qt5::Core
-	Qt5::Qml
-	Qt5::TextToSpeech
-	Qt5::Widgets
-
-	qgc
+		Qt5::Core
+		Qt5::Qml
+		Qt5::TextToSpeech
+		Qt5::Widgets
 )
 
 target_include_directories(Audio PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
