--- a/src/Vehicle/CMakeLists.txt
+++ b/src/Vehicle/CMakeLists.txt
@@ -20,5 +20,4 @@ target_link_libraries(Vehicle
 		qgc
 )
 
-target_include_directories(Vehicle PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-
+target_include_directories(Vehicle INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
