--- a/src/Settings/AutoConnect.SettingsGroup.json
+++ b/src/Settings/AutoConnect.SettingsGroup.json
@@ -1,76 +1,83 @@
 [
 {
-    "name":             "AutoconnectUDP",
+    "name":             "autoConnectUDP",
     "shortDescription": "Automatically open a connection over UDP",
     "longDescription":  "If this option is enabled GroundControl will automatically connect to a vehicle which is detected on a UDP communication link.",
     "type":             "bool",
     "defaultValue":     true
 },
 {
-    "name":             "AutoconnectPixhawk",
+    "name":             "autoConnectPixhawk",
     "shortDescription": "Automatically connect to a Pixhawk board",
     "longDescription":  "If this option is enabled GroundControl will automatically connect to a Pixhawk board which is connected via USB.",
     "type":             "bool",
     "defaultValue":     true
 },
 {
-    "name":             "Autoconnect3DRRadio",
+    "name":             "autoConnectSiKRadio",
     "shortDescription": "Automatically connect to a SiK Radio",
     "longDescription":  "If this option is enabled GroundControl will automatically connect to a vehicle which is detected on a SiK Radio communication link.",
     "type":             "bool",
     "defaultValue":     true
 },
 {
-    "name":             "AutoconnectPX4Flow",
+    "name":             "autoConnectPX4Flow",
     "shortDescription": "Automatically connect to a P4 Flow",
     "longDescription":  "If this option is enabled GroundControl will automatically connect to a PX4 Flow board which is connected via USB.",
     "type":             "bool",
     "defaultValue":     true
 },
 {
-    "name":             "AutoconnectRTKGPS",
+    "name":             "autoConnectRTKGPS",
     "shortDescription": "Automatically connect to an RTK GPS",
     "longDescription":  "If this option is enabled GroundControl will automatically connect to an RTK GPS which is connected via USB.",
     "type":             "bool",
     "defaultValue":     true
 },
 {
-    "name":             "AutoconnectLibrePilot",
+    "name":             "autoConnectLibrePilot",
     "shortDescription": "Automatically connect to a LibrePilot",
     "longDescription":  "If this option is enabled GroundControl will automatically connect to a LibrePilot board which is connected via USB.",
     "type":             "bool",
     "defaultValue":     true
 },
 {
-    "name":             "AutoconnectNmeaPort",
+    "name":             "autoConnectNmeaPort",
     "shortDescription": "NMEA GPS device for GCS position",
     "longDescription":  "NMEA GPS device for GCS position",
     "type":             "string",
     "defaultValue":     "disabled"
 },
 {
-    "name":             "AutoconnectNmeaBaud",
+    "name":             "autoConnectNmeaBaud",
     "shortDescription": "NMEA GPS Baudrate",
     "longDescription":  "NMEA GPS Baudrate",
     "type":             "uint32",
     "defaultValue":     4800
 },
 {
-    "name":             "AutoconnectUDPListenPort",
+    "name":             "udpListenPort",
     "shortDescription": "UDP port for autoconnect",
     "type":             "uint32",
     "defaultValue":     14550
 },
 {
-    "name":             "AutoconnectUDPTargetHostIP",
+    "name":             "udpTargetHostIP",
     "shortDescription": "UDP target host IP for autoconnect",
     "type":             "string",
     "defaultValue":     ""
 },
 {
-    "name":             "AutoconnectUDPTargetHostPort",
+    "name":             "udpTargetHostPort",
     "shortDescription": "UDP target host port for autoconnect",
     "type":             "uint32",
     "defaultValue":     14550
+},
+{
+    "name":             "autoConnectTaisyncUSB",
+    "shortDescription": "Automatically connect to a Taisync Ground Module",
+    "longDescription":  "If this option is enabled GroundControl will automatically connect to a Taisync Ground Module which is connected via USB.",
+    "type":             "bool",
+    "defaultValue":     false
 }
 ]
