--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -51,18 +51,22 @@ test_script:
   - if "%CONFIG%" EQU "debug" ( %SHADOW_BUILD_DIR%\debug\qgroundcontrol --unittest )
 
 for:
-  -
-    branches:
-      only: master
-        artifacts:
-          -
-            path: QGroundControl-installer.exe
-            name: qgcinstaller
-      only: Stable_V3.4
-        artifacts:
-          -
-            path: symbols\**\*.*_
-            name: symbols
+-
+  branches:
+    only:
+      - master
+  artifacts:
+  - path: QGroundControl-installer.exe
+    name: qgcinstaller
+-
+  branches:
+    only:
+      - Stable_V3.4
+  artifacts:
+    - path: QGroundControl-installer.exe
+      name: qgcinstaller
+    - path: symbols\**\*.*_
+      name: symbols
 
 deploy:
 # deploy continuous builds to s3
@@ -80,7 +84,7 @@ deploy:
       CONFIG: installer
       appveyor_repo_tag: false
 
-# Note: Symbols for daily builds are currently turned off due to AppVeyor artifact storage limitations
+# Symbols for daily builds are currently turned off due to AppVeyor artifact storage limits
 # deploy daily build symbols to s3
 #  - provider: S3
 #    access_key_id:
@@ -96,23 +100,20 @@ deploy:
 #      CONFIG: installer
 #      appveyor_repo_tag: false
 
-# deploy release symbols to s3 (Only for Stable Builds)
-  - for:
-    branches:
-        only: Stable_V3.4
-          - provider: S3
-			access_key_id:
-			  secure: IGAojLMqokL+76DbdulmWDA3MTsxEBBi3ReVVSqTy9c=
-			secret_access_key:
-			  secure: RiYqaR+3T2PMNz2j5ur8LCA6H/Zfd4jTX33CZE5iBxm+zaz4QLs25p0B7prpaoNN
-			bucket: qgroundcontrol
-			region: us-west-2
-			set_public: true
-			folder: releasesyms
-			artifact: symbols
-			on:
-			  CONFIG: installer
-			  appveyor_repo_tag: true
+# deploy release symbols to s3
+  - provider: S3
+    access_key_id:
+      secure: IGAojLMqokL+76DbdulmWDA3MTsxEBBi3ReVVSqTy9c=
+    secret_access_key:
+      secure: RiYqaR+3T2PMNz2j5ur8LCA6H/Zfd4jTX33CZE5iBxm+zaz4QLs25p0B7prpaoNN
+    bucket: qgroundcontrol
+    region: us-west-2
+    set_public: true
+    folder: releasesyms
+    artifact: symbols
+    on:
+      CONFIG: installer
+      appveyor_repo_tag: true
 
 # deploy tagged releases to Github releases
   - provider: GitHub
