--- a/.travis.yml
+++ b/.travis.yml
@@ -88,12 +88,11 @@ install:
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/gstreamer-1.0-android-armv7-1.5.2.tar.bz2 &&
         mkdir -p ${TRAVIS_BUILD_DIR}/gstreamer-1.0-android-armv7-1.5.2 &&
         tar jxf gstreamer-1.0-android-armv7-1.5.2.tar.bz2 -C ${TRAVIS_BUILD_DIR}/gstreamer-1.0-android-armv7-1.5.2 &&
-        wget --quiet http://dl.google.com/android/ndk/android-ndk-r10e-linux-x86_64.bin &&
-        chmod +x android-ndk-r10e-linux-x86_64.bin &&
-        ./android-ndk-r10e-linux-x86_64.bin > /dev/null &&
-        export ANDROID_NDK_ROOT=`pwd`/android-ndk-r10e &&
+        wget --quiet https://dl.google.com/android/repository/android-ndk-r16b-linux-x86_64.zip &&
+        unzip android-ndk-r16g-linux-x86_64.zip -d 'pwd' &&
+        export ANDROID_NDK_ROOT=`pwd`/android-ndk-r16b &&
         export ANDROID_SDK_ROOT=/usr/local/android-sdk &&
-        export PATH=/tmp/Qt5.11-android_armv7/5.11.0/android_armv7/bin:`pwd`/android-ndk-r10e:$PATH && echo $PATH
+        export PATH=/tmp/Qt5.11-android_armv7/5.11.0/android_armv7/bin:`pwd`/android-ndk-r16b:$PATH && echo $PATH
         ;
     fi
 
